Update on formatting and new pages added
- Tidied up the wording on the pages
- Added new pages

--- a/anisotropic.html
+++ b/anisotropic.html
@@ -7,6 +7,11 @@
 		<script src="https://kit.fontawesome.com/09f8bce437.js" crossorigin="anonymous"></script>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<style>
+			.tab-like{
+				text-indent: 20px;
+			}
+		</style>
 	</head>
 	<body class="is-preload">
 
@@ -73,8 +78,8 @@
 								<h2>About the Project</h2>
 							</header>
 
-							<p>This is one of the freelance work I was hired to partake in for a local student. The client provided the info of their project and required an assistant and a teacher to create a Java program for their project in order to proof a concept in Anisotropic Diffusion. It was quite tough deciphering the formula and I had to process the equation that was in their paperwork and translate it to Java language to make the program based on <a href="https://www.researchgate.net/publication/236985005_KAZE_Features#pf5" target="_blank">Perona-Malik</a>, <a href="https://www.researchgate.net/publication/316693552_Automatic_Conductance_Estimation_Methods_for_Anisotropic_Diffusion_ITK_Filters" target="_blank">Conductance Estimation Methods</a> and <a href="https://www.cns.nyu.edu/heegerlab/content/software/robanistdif/Black-IEEE-IP98.pdf" target="_blank">BLACK et al</a>. The principles applied for the program to work:
-                <ul>
+							<p class="tab-like" style="text-align: justify;">This is one of the freelance work I was hired to partake in for a local student. The client provided the info of their project and required an assistant and a teacher to create a Java program for their project in order to proof a concept in Anisotropic Diffusion. It was quite tough deciphering the formula and I had to process the equation that was in their paperwork and translate it to Java language to make the program based on <a href="https://www.researchgate.net/publication/236985005_KAZE_Features#pf5" target="_blank">Perona-Malik</a>, <a href="https://www.researchgate.net/publication/316693552_Automatic_Conductance_Estimation_Methods_for_Anisotropic_Diffusion_ITK_Filters" target="_blank">Conductance Estimation Methods</a> and <a href="https://www.cns.nyu.edu/heegerlab/content/software/robanistdif/Black-IEEE-IP98.pdf" target="_blank">BLACK et al</a>. The principles applied for the program to work:
+                <ul style="text-align: left;">
                   <li>Persona-Malik</li>
                   <li>Conductance Equation</li>
                   <li>Black et al</li>
