--- a/personal-projects.html
+++ b/personal-projects.html
@@ -74,7 +74,7 @@
 							</header>
 
 							<p>Welcome to my list of personal projects! Most of these projects were written in Java, Python, HTML, PHP, SQL. My endeavours in these projects were entirely as a hobby and interest in game and web development. I have also explored in the cybersecurity industry to gain further knowledge as an addition to my university coursed during my diploma in Network Security.
-              <ul>
+              <ul style="text-align: left;">
                 <li>Calradia RPG (Text-Based Java Game)</li>
                 <li>Danmachi RPG (Text-Based HTML Game)</li>
                 <li>Ocelot (Portable Pen-Testing - Final Year Project)</li>
@@ -123,7 +123,7 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/uac.png" alt="" /></a>
+										<a href="project-networkvulnerabilities.html" class="image fit"><img src="images/uac.png" alt="" /></a>
 										<header>
 											<h3>Network Vulnerabilities</h3>
 										</header>
