--- a/project-ocelot.html
+++ b/project-ocelot.html
@@ -126,7 +126,7 @@
 							<strong>Ocelot (Portable Pen-Tester)</strong><br />
 						</h2>
 						<p>
-							These are the projects I have dedicated in learning and challenging myself in programming in various languages and sharpen my knowledge in them.<br />
+							These are the projects I have dedicated in learning and challenging myself in programming in various languages and sharpen my knowledge in them. This project is the final year project that I had chose and conducted in innovating a mobile tool that allows white hat hackers to conduct their penetration-tests and social engineering procedures.<br />
 						</p>
 					</header>
 
