--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 				text-align: center;
 				display: block;
 			}
+			.tab-like{
+				text-indent: 20px;
+			}
 		</style>
 	</head>
 	<body class="is-preload">
@@ -80,10 +83,10 @@
 								<h2>Portfolio</h2>
 							</header>
 
-							<p>I have been freelancing and worked on my own free time to further enhance my skills in programming. I have also done my internship as a Junior Software Developer and worked with Compurex Corporation in training my capabilities to become a Full Stack Developer. Other than that, I continued working with local students in teaching and working with their projects as a freelancer.</p>
+							<p class="tab-like" style="text-align: justify;">I have been freelancing and worked on my own free time to further enhance my skills in programming. I have also done my internship as a Junior Software Developer and worked with Compurex Corporation in training my capabilities to become a Full Stack Developer. Other than that, I continued working with local students in teaching and working with their projects as a freelancer.</p>
 
 							<div class="row">
-								<div class="col-4 col-12-mobile">
+								<div class="col-6 col-12-mobile">
 									<article class="item">
 										<a href="intern-project.html" class="image fit"><img src="images/reportgen1.png" alt="" /></a>
 										<header>
@@ -97,7 +100,7 @@
 										</header>
 									</article>
 								</div>
-								<div class="col-4 col-12-mobile">
+								<div class="col-6 col-12-mobile">
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/teachingpic.jpg" alt="" /></a>
 										<header>
@@ -105,21 +108,19 @@
 										</header>
 									</article>
 									<article class="item">
+										<a href="personal-projects.html" class="image fit"><img src="images/personalproject.jpg" alt="" /></a>
+										<header>
+											<h3>Personal Projects</h3>
+										</header>
+									</article>
+									<!--<article class="item">
 										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 										<header>
 											<h3>Freelance Work: Leave Application</h3>
 										</header>
 									</article>
+								</div>-->
 								</div>
-								<div class="col-4 col-12-mobile">
-									<article class="item">
-										<a href="personal-projects.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-										<header>
-											<h3>Personal Projects</h3>
-										</header>
-									</article>
-								</div>
-							</div>
 						</div>
 					</section>
 
@@ -131,7 +132,7 @@
 								<h2>About Me</h2>
 							</header>
 							<a href="#" class="image featured"><img src="images/homepagepic.jpg" alt="" /></a>
-							<p>I have always been intrigued with technology especially computers. I started playing with computers at a young age of 7 years old. I graduated from German-Malaysian Institute with Diploma in Network Security where I learned through Cisco Networking Academy (CCNA) and the basics of programming languages such as Python, HTML, PHP, Java, and SQL. While learning cybersecurity and CCNA, I self taught myself in learning more in developing simple web development and challenge myself in learning new things. My hobbies outside of coding are playing video games, creating content through video editing, and cooking.</p>
+							<p class="tab-like" style="text-align: justify;">I have always been intrigued with technology especially computers. I started playing with computers at a young age of 7 years old. I graduated from German-Malaysian Institute with Diploma in Network Security where I learned through Cisco Networking Academy (CCNA) and the basics of programming languages such as Python, HTML, PHP, Java, and SQL. While learning cybersecurity and CCNA, I self taught myself in learning more in developing simple web development and challenge myself in learning new things. My hobbies outside of coding are playing video games, creating content through video editing, and cooking.</p>
 
 							<header>
 								<h2>Skills</h2>
