--- a/intern-project.html
+++ b/intern-project.html
@@ -7,6 +7,11 @@
 		<script src="https://kit.fontawesome.com/09f8bce437.js" crossorigin="anonymous"></script>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<style>
+			.tab-like{
+				text-indent: 20px;
+			}
+		</style>
 	</head>
 	<body class="is-preload">
 
@@ -73,15 +78,15 @@
 								<h2>About the Project</h2>
 							</header>
 
-							<p>CompuRex Corporation is a company that provides Software as a Service (SaaS). Delivering new technological solutions and digital media contents to organizations. I am delighted for the opportunity to work with this company with the amount of projects and tasks each employee responsible to deliver. Through this project, I was tasked to create a responsive website and a dashboard for statistics displays such as number of orders, number of procurements, and etcetera. The project also required me to create a database included with the Entity Relationship Diagram (ERD) for each modules such as:
-              <ul>
+							<p class="tab-like" style="text-align: justify;">CompuRex Corporation is a company that provides Software as a Service (SaaS). Delivering new technological solutions and digital media contents to organizations. I am delighted for the opportunity to work with this company with the amount of projects and tasks each employee responsible to deliver. Through this project, I was tasked to create a responsive website and a dashboard for statistics displays such as number of orders, number of procurements, and etcetera. The project also required me to create a database included with the Entity Relationship Diagram (ERD) for each modules such as:
+              <ul style="text-align: left;">
                 <li>User Login Module</li>
                 <li>Dashboard</li>
                 <li>User Access Control Module (Admin Use)</li>
                 <li>Product Registration Module</li>
                 <li>Procurement Registration Module</li>
                 <li>Messaging Module</li>
-                <li>CRUD Modules (For Product & Procurement Modules)</li>
+                <li>Create, Read, Update, Delete (CRUD) Modules (For Product & Procurement Modules)</li>
               </ul>
               </p>
             </div>
