--- a/personal-projects.html
+++ b/personal-projects.html
@@ -79,7 +79,7 @@
                 <li>Danmachi RPG (Text-Based HTML Game)</li>
                 <li>Ocelot (Portable Pen-Testing - Final Year Project)</li>
                 <li>Creating a HoneyPot</li>
-                <li>Network Vulnerabilities</li>
+                <li>Website Vulnerabilities</li>
               </ul>
               </p>
             </div>
@@ -125,7 +125,7 @@
 									<article class="item">
 										<a href="project-networkvulnerabilities.html" class="image fit"><img src="images/uac.png" alt="" /></a>
 										<header>
-											<h3>Network Vulnerabilities</h3>
+											<h3>Website Vulnerabilities</h3>
 										</header>
 									</article>
 								</div>
