--- a/personal-projects.html
+++ b/personal-projects.html
@@ -89,11 +89,11 @@
           <section id="images" class="three">
             <div class="container">
               <header>
-                <h2>Project Images</h2>
+                <h2>Projects</h2>
               </header>
 
               <div class="row">
-								<div class="col-4 col-12-mobile">
+								<div class="col-6 col-12-mobile">
 									<article class="item">
 										<a href="project-calradia.html" class="image fit"><img src="images/calradiaRPG/Intro Image.PNG" alt="" /></a>
 										<header>
@@ -107,21 +107,13 @@
 										</header>
 									</article>
 								</div>
-								<div class="col-4 col-12-mobile">
+								<div class="col-6 col-12-mobile">
 									<article class="item">
 										<a href="project-ocelot.html" class="image fit"><img src="images/ocelot/projectlogo.png" alt="" /></a>
 										<header>
 											<h3>Ocelot</h3>
 										</header>
 									</article>
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/crud1.png" alt="" /></a>
-										<header>
-											<h3>HoneyPot</h3>
-										</header>
-									</article>
-								</div>
-								<div class="col-4 col-12-mobile">
 									<article class="item">
 										<a href="project-networkvulnerabilities.html" class="image fit"><img src="images/uac.png" alt="" /></a>
 										<header>
