--- a/index.html
+++ b/index.html
@@ -74,9 +74,53 @@
 
 						</div>
 					</section>
+				
+				<!-- About Me -->
+				<section id="about" class="two">
+					<div class="container">
+
+						<header>
+							<h2>About Me</h2>
+						</header>
+						<a href="#" class="image featured"><img src="images/homepagepic.jpg" alt="" /></a>
+						<p class="tab-like" style="text-align: justify;">I have always been intrigued with technology especially computers. I started playing with computers at a young age of 7 years old. I graduated from German-Malaysian Institute with Diploma in Network Security where I learned through Cisco Networking Academy (CCNA) and the basics of programming languages such as Python, HTML, PHP, Java, and SQL. While learning cybersecurity and CCNA, I self taught myself in learning more in developing simple web development and challenge myself in learning new things. My hobbies outside of coding are playing video games, creating content through video editing, and cooking.</p>
+
+						<header>
+							<h2>Skills</h2>
+						</header>
+						<div class="row">
+							<div class="col-4 col-12-mobile">
+								<article class="item">
+									<h3>Front-End</h4> <br>
+									HTML <i class="fa-brands fa-html5 fa-beat-fade" style="color: #df8b2a;"></i><br /></li>
+									JavaScript <i class="fa-brands fa-js fa-beat-fade" style="color:#df8b2a"></i><br>
+									Bootstrap <i class="fa-brands fa-bootstrap fa-beat-fade" style="color:#df8b2a"></i><br>
+									CSS <i class="fa-brands fa-css3-alt fa-beat-fade" style="color:#df8b2a"></i><br>
+								</article>
+							</div>
+							<div class="col-4 col-12-mobile">
+								<article class="item">
+									<h3>Back-End</h3> <br>
+									JQuery <i class="fa-solid fa-code fa-beat-fade" style="color:#df8b2a"></i><br>
+									SQL <i class="fa-solid fa-database fa-beat-fade" style="color:#df8b2a"></i><br>
+									PHP <i class="fa-brands fa-php fa-beat-fade" style="color:#df8b2a"></i><br>
+									C# <i class="fa-solid fa-c fa-beat-fade" style="color:#df8b2a"></i><i class="fa-solid fa-hashtag fa-beat-fade" style="color:#df8b2a"></i><br>
+								</article>
+							</div>
+							<div class="col-4 col-12-mobile">
+								<article class="item">
+									<h3>Other Languages</h3> <br>
+									Python <i class="fa-brands fa-python fa-beat-fade" style="color:#df8b2a"></i><br>
+									Java <i class="fa-brands fa-java fa-beat-fade" style="color:#df8b2a"></i><br>
+									Unity <i class="fa-brands fa-unity fa-beat-fade" style="color:#df8b2a"></i><br>
+								</article>
+							</div>
+						</div>
+					</div>
+				</section>
 
 				<!-- Portfolio -->
-					<section id="portfolio" class="two">
+					<section id="portfolio" class="three">
 						<div class="container">
 
 							<header>
@@ -121,52 +165,6 @@
 									</article>
 								</div>-->
 								</div>
-						</div>
-					</section>
-
-				<!-- About Me -->
-					<section id="about" class="three">
-						<div class="container">
-
-							<header>
-								<h2>About Me</h2>
-							</header>
-							<a href="#" class="image featured"><img src="images/homepagepic.jpg" alt="" /></a>
-							<p class="tab-like" style="text-align: justify;">I have always been intrigued with technology especially computers. I started playing with computers at a young age of 7 years old. I graduated from German-Malaysian Institute with Diploma in Network Security where I learned through Cisco Networking Academy (CCNA) and the basics of programming languages such as Python, HTML, PHP, Java, and SQL. While learning cybersecurity and CCNA, I self taught myself in learning more in developing simple web development and challenge myself in learning new things. My hobbies outside of coding are playing video games, creating content through video editing, and cooking.</p>
-
-							<header>
-								<h2>Skills</h2>
-							</header>
-								<table class="table-borderless table-sm">
-									<tbody>
-										<tr>
-											<td>
-												<i class="fa-brands fa-html5 fa-beat-fade" style="color: #df8b2a;"></i><br />HTML</li>
-											</td>
-											<td>
-												<i class="fa-brands fa-js fa-beat-fade" style="color:#df8b2a"></i><br>JavaScript
-											</td>
-											<td>
-												<i class="fa-brands fa-php fa-beat-fade" style="color:#df8b2a"></i><br>PHP
-											</td>
-											<td><i class="fa-solid fa-code fa-beat-fade" style="color:#df8b2a"></i><br>JQuery</td>
-										</tr>
-										<tr>
-											<td>
-												<i class="fa-brands fa-java fa-beat-fade" style="color:#df8b2a"></i><br>Java
-											</td>
-											<td>
-												<i class="fa-solid fa-database fa-beat-fade" style="color:#df8b2a"></i><br>SQL
-											</td>
-											<td>
-												<i class="fa-solid fa-c fa-beat-fade" style="color:#df8b2a"></i><i class="fa-solid fa-hashtag fa-beat-fade" style="color:#df8b2a"></i><br>C#
-											</td>
-											<td>
-												<i class="fa-brands fa-python fa-beat-fade" style="color:#df8b2a"></i><br>Python
-											</td>
-										</tr>
-									</tbody>
-								</table>
 						</div>
 					</section>
 
